tests/semantic/invalid/get-string.inox
Module GetStringInvalid

Main :
    S String := ""
    Get(S)
;
